--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -8,9 +8,9 @@
         android:allowBackup="true"
         android:dataExtractionRules="@xml/data_extraction_rules"
         android:fullBackupContent="@xml/backup_rules"
-        android:icon="@mipmap/ic_launcher"
-        android:label="@string/app_name"
-        android:roundIcon="@mipmap/ic_launcher_round"
+        android:icon="@mipmap/robber_entering_by_a_window_icon_icons_com_70631"
+        android:label="@string/KPSAtual"
+        android:roundIcon="@mipmap/robber_entering_by_a_window_icon_icons_com_70631"
         android:supportsRtl="true"
         android:theme="@style/Theme.KSPatual"
         tools:targetApi="31">
